UT-4 Fixed Side Panel layout issue after translating to other languages

--- a/Source Code/Front End/src/app/modules/admin/dashboard/admin-dashboard.component.scss
+++ b/Source Code/Front End/src/app/modules/admin/dashboard/admin-dashboard.component.scss
@@ -3,8 +3,7 @@ mat-sidenav {
  
     background: #005AB5;
     color: white;
-    width: 205px;
-  
+    width: 213px;
 }
 
 .content {
