--- a/Source Code/Front End/src/app/modules/staff/staff-dashboard/staff-dashboard.component.scss
+++ b/Source Code/Front End/src/app/modules/staff/staff-dashboard/staff-dashboard.component.scss
@@ -3,7 +3,7 @@ mat-sidenav {
  
     background: #005AB5;
     color: white;
-    width: 205px;
+    width: 210px;
   
 }
 
